--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "semantic-ui-react": "^0.87.3"
   },
   "scripts": {
